--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="project-1.css">
 </head>
 <body>
-hello world
+hello world welcome 2
 <img src="SUPER.PNG">
 </body>
 </html>
